--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Agrinho 2024 </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
     </header>
+        <img src="img/" alt="descrever aqui a imagem">
+        <h1 class="titulo-principal"> 
+
+        </h1>
 
     <section class="secao1">
     </section>
